--- a/spdy-ping.cabal
+++ b/spdy-ping.cabal
@@ -66,7 +66,7 @@ executable spdy-ping
      data-default-class == 0.0.1, network == 2.6.0.2,
      x509 == 1.5.0.1, certificate == 1.3.9,
      x509-store ==  1.5.0, x509-system == 1.5.0, bitset == 1.4.8,
-     binary == 0.7.1.0, pipes == 4.1.4, containers == 0.5.5.1
+     binary == 0.7.1.0, pipes == 4.1.4, containers == 0.5.5.1, clock == 0.4.1.3
   
   -- Directories containing source files.
   hs-source-dirs: hs-src
