--- a/spdy-ping.cabal
+++ b/spdy-ping.cabal
@@ -48,6 +48,34 @@ extra-source-files:  README.md
 -- Constraint on the version of Cabal needed to build this package.
 cabal-version:       >=1.10
 
+executable kel
+  main-is: kel.hs 
+  
+  -- LANGUAGE extensions used by modules in this package.
+  -- other-extensions:    
+  
+  -- Other library packages from which modules are imported.
+  build-depends:       base >=4.7 && <4.8, optparse-applicative, 
+     connection==0.2.3, bytestring == 0.10.4.0, data-default == 0.5.3,
+     tls == 1.2.13, 
+     data-default-class == 0.0.1, network == 2.6.0.2,
+     x509 == 1.5.0.1, certificate == 1.3.9,
+     x509-store ==  1.5.0, x509-system == 1.5.0, bitset == 1.4.8,
+     binary == 0.7.1.0, pipes == 4.1.4, containers == 0.5.5.1, clock == 0.4.1.3,
+     network-simple == 0.4.0.2, pipes-concurrency == 2.0.2, unix == 2.7.0.1,
+     filepath == 1.3.0.2, directory == 1.2.1.0, asn1-encoding == 0.9.0,
+     crypto-pubkey == 0.2.7 
+     , asn1-types == 0.3.0
+     , crypto-random == 0.0.8
+     -- , asn-data
+  
+  -- Directories containing source files.
+  hs-source-dirs: hs-src
+  
+  -- Base language which the package is written in.
+  default-language:    Haskell2010
+  
+
 
 executable spdy-ping
   -- .hs or .lhs file containing the Main module.
