--- a/rede.cabal
+++ b/rede.cabal
@@ -55,18 +55,33 @@ executable kel
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7 && <4.8, optparse-applicative, 
-     connection==0.2.3, bytestring == 0.10.4.0, data-default == 0.5.3,
-     tls == 1.2.13, 
-     data-default-class == 0.0.1, network == 2.6.0.2,
-     x509 == 1.5.0.1, certificate == 1.3.9,
-     x509-store ==  1.5.0, x509-system == 1.5.0, bitset == 1.4.8,
-     binary == 0.7.1.0, pipes == 4.1.4, containers == 0.5.5.1, clock == 0.4.1.3,
-     network-simple == 0.4.0.2, pipes-concurrency == 2.0.2, unix == 2.7.0.1,
-     filepath == 1.3.0.2, directory == 1.2.1.0, asn1-encoding == 0.9.0,
-     crypto-pubkey == 0.2.7 
-     , asn1-types == 0.3.0
-     , crypto-random == 0.0.8
+  build-depends:       base >=4.7 && <4.8
+      , optparse-applicative
+      , connection==0.2.3
+      , bytestring == 0.10.4.0
+      , data-default == 0.5.3
+      , tls == 1.2.13
+      , data-default-class == 0.0.1
+      , network == 2.6.0.2
+      , x509 == 1.5.0.1
+      , certificate == 1.3.9
+      , x509-store ==  1.5.0
+      , x509-system == 1.5.0
+      , bitset == 1.4.8
+      , binary == 0.7.1.0
+      , pipes == 4.1.4
+      , containers == 0.5.5.1
+      , clock == 0.4.1.3
+      , network-simple == 0.4.0.2
+      , pipes-concurrency == 2.0.2
+      , unix == 2.7.0.1
+      , filepath == 1.3.0.2
+      , directory == 1.2.1.0
+      , asn1-encoding == 0.9.0
+      , crypto-pubkey == 0.2.7 
+      , asn1-types == 0.3.0
+      , crypto-random == 0.0.8
+      , streaming-commons == 0.1.8
      -- , asn-data
   
   -- Directories containing source files.
