--- a/rede.cabal
+++ b/rede.cabal
@@ -82,6 +82,8 @@ executable kel
       , asn1-types == 0.3.0
       , crypto-random == 0.0.8
       , streaming-commons == 0.1.8
+      , conduit == 1.2.3.1
+      , transformers >=0.3 && <= 0.5
      -- , asn-data
   
   -- Directories containing source files.
