--- a/rede.cabal
+++ b/rede.cabal
@@ -126,7 +126,7 @@ executable spdy-ping
      x509 == 1.5.0.1, certificate == 1.3.9,
      x509-store ==  1.5.0, x509-system == 1.5.0, bitset == 1.4.8,
      binary == 0.7.1.0, pipes == 4.1.4, containers == 0.5.5.1, clock == 0.4.1.3,
-     network-simple == 0.4.0.2, pipes-concurrency == 2.0.2
+     network-simple == 0.4.0.2, pipes-concurrency == 2.0.2      , conduit == 1.2.3.1
   
   -- Directories containing source files.
   hs-source-dirs: hs-src
