A long way to correct streams

--- a/rede.cabal
+++ b/rede.cabal
@@ -85,6 +85,7 @@ executable kel
       , conduit == 1.2.3.1
       , transformers >=0.3 && <= 0.5
       , mmorph == 1.0.4
+      , QuickCheck ==  2.7.6
      -- , asn-data
   
   -- Directories containing source files.
