--- a/rede.cabal
+++ b/rede.cabal
@@ -86,6 +86,7 @@ executable kel
       , transformers >=0.3 && <= 0.5
       , mmorph == 1.0.4
       , QuickCheck ==  2.7.6
+      , network-uri == 2.6.0.1
      -- , asn-data
   
   -- Directories containing source files.
