--- a/rede.cabal
+++ b/rede.cabal
@@ -48,8 +48,8 @@ extra-source-files:  README.md
 -- Constraint on the version of Cabal needed to build this package.
 cabal-version:       >=1.10
 
-executable kel
-  main-is: kel.hs 
+executable reh
+  main-is: reh.hs 
   
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:    
