Okej, everything works fast

--- a/rede.cabal
+++ b/rede.cabal
@@ -88,6 +88,7 @@ executable reh
       , QuickCheck ==  2.7.6
       , network-uri == 2.6.0.1
       , hashtables == 1.2.0.1
+      , dequeue == 0.1.5
      -- , asn-data
   
   -- Directories containing source files.
