--- a/rede.cabal
+++ b/rede.cabal
@@ -57,10 +57,10 @@ executable reh
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.7 && <4.8
       , optparse-applicative
-      , connection==0.2.3
+      , connection >= 0.2 && < 0.3
       , bytestring == 0.10.4.0
       , data-default == 0.5.3
-      , tls == 1.2.13
+      , tls >= 1.2 && < 1.3
       , data-default-class == 0.0.1
       , network == 2.6.0.2
       , x509 == 1.5.0.1
@@ -73,21 +73,21 @@ executable reh
       , containers == 0.5.5.1
       , clock == 0.4.1.3
       , network-simple == 0.4.0.2
-      , pipes-concurrency == 2.0.2
+      , pipes-concurrency >= 2.0 && < 2.1
       , unix == 2.7.0.1
       , filepath == 1.3.0.2
       , directory == 1.2.1.0
       , asn1-encoding == 0.9.0
-      , crypto-pubkey == 0.2.7 
+      , crypto-pubkey >= 0.2.7 && <0.3
       , asn1-types == 0.3.0
       , crypto-random == 0.0.8
-      , streaming-commons == 0.1.8
+      , streaming-commons >= 0.1 && < 0.2
       , conduit == 1.2.3.1
       , transformers >=0.3 && <= 0.5
       , mmorph == 1.0.4
       , QuickCheck ==  2.7.6
-      , network-uri == 2.6.0.1
-      , hashtables == 1.2.0.1
+      , network-uri >= 2.6 && < 2.7
+      , hashtables >= 1.2 && < 1.3
       , dequeue == 0.1.5
      -- , asn-data
   
@@ -124,13 +124,13 @@ executable spdy-ping
   
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.7 && <4.8, optparse-applicative, 
-     connection==0.2.3, bytestring == 0.10.4.0, data-default == 0.5.3,
-     tls == 1.2.13, 
+     connection>=0.2.4 && < 0.3, bytestring == 0.10.4.0, data-default == 0.5.3,
+     tls >= 1.2 && < 1.3, 
      data-default-class == 0.0.1, network == 2.6.0.2,
      x509 == 1.5.0.1, certificate == 1.3.9,
      x509-store ==  1.5.0, x509-system == 1.5.0, bitset == 1.4.8,
      binary == 0.7.1.0, pipes == 4.1.4, containers == 0.5.5.1, clock == 0.4.1.3,
-     network-simple == 0.4.0.2, pipes-concurrency == 2.0.2      , conduit == 1.2.3.1
+     network-simple == 0.4.0.2, pipes-concurrency >= 2.0 && <2.2 , conduit == 1.2.3.1
      , transformers >=0.3 && <= 0.5
   
   -- Directories containing source files.
