--- a/rede.cabal
+++ b/rede.cabal
@@ -57,6 +57,7 @@ executable reh
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.7 && <4.8
       , optparse-applicative
+      , aeson >= 0.8
       , connection >= 0.2 && < 0.3
       , bytestring == 0.10.4.0
       , data-default == 0.5.3
@@ -89,6 +90,7 @@ executable reh
       , network-uri >= 2.6 && < 2.7
       , hashtables >= 1.2 && < 1.3
       , dequeue == 0.1.5
+      , lens >= 4.6 && < 4.7
      -- , asn-data
   
   -- Directories containing source files.
