--- a/rede.cabal
+++ b/rede.cabal
@@ -68,6 +68,7 @@ executable reh
       , certificate == 1.3.9
       , x509-store ==  1.5.0
       , x509-system == 1.5.0
+      , text >= 1.2 && < 1.3
       , bitset == 1.4.8
       , binary == 0.7.1.0
       , pipes == 4.1.4
