--- a/rede.cabal
+++ b/rede.cabal
@@ -94,6 +94,7 @@ executable reh-mimic
       , hashtables >= 1.2 && < 1.3
       , dequeue == 0.1.5
       , lens >= 4.6 && < 4.7
+      , base64-bytestring >= 1.0
      -- , asn-data
   
   -- Directories containing source files.
@@ -137,6 +138,7 @@ executable spdy-ping
      binary == 0.7.1.0, pipes == 4.1.4, containers == 0.5.5.1, clock == 0.4.1.3,
      network-simple == 0.4.0.2, pipes-concurrency >= 2.0 && <2.2 , conduit == 1.2.3.1
      , transformers >=0.3 && <= 0.5
+     , text >= 1.2
   
   -- Directories containing source files.
   hs-source-dirs: hs-src
