--- a/rede.cabal
+++ b/rede.cabal
@@ -87,6 +87,7 @@ executable reh-mimic
       , crypto-random == 0.0.8
       , streaming-commons >= 0.1 && < 0.2
       , conduit == 1.2.3.1
+      , conduit-combinators >= 0.3.0 && < 0.4
       , transformers >=0.3 && <= 0.5
       , mmorph == 1.0.4
       , QuickCheck ==  2.7.6
