--- a/rede.cabal
+++ b/rede.cabal
@@ -13,10 +13,10 @@ name:                rede
 version:             0.1.0.0
 
 -- A short (one-line) description of the package.
-synopsis: Spdy musings.
+synopsis: Rede HTTP/2 instrumentation server
 
 -- A longer description of the package.
-description:  Spdy musings.
+description:  Rede HTTP/2 instrumentation server
 
 -- URL for the project homepage or repository.
 homepage:            www.zunzun.se
@@ -57,48 +57,48 @@ executable reh-mimic
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7 && <4.8
-      , optparse-applicative
-      , aeson >= 0.8
-      , connection >= 0.2 && < 0.3
-      , bytestring == 0.10.4.0
-      , data-default == 0.5.3
-      , tls >= 1.2 && < 1.3
-      , data-default-class == 0.0.1
-      , network == 2.6.0.2
-      , x509 == 1.5.0.1
-      , certificate == 1.3.9
-      , x509-store ==  1.5.0
-      , x509-system == 1.5.0
-      , text >= 1.2 && < 1.3
-      , bitset == 1.4.8
-      , binary == 0.7.1.0
-      , pipes == 4.1.4
-      , containers == 0.5.5.1
-      , clock == 0.4.1.3
-      , network-simple == 0.4.0.2
-      , pipes-concurrency >= 2.0 && < 2.1
-      , unix == 2.7.0.1
-      , filepath == 1.3.0.2
-      , directory == 1.2.1.0
-      , asn1-encoding == 0.9.0
-      , crypto-pubkey >= 0.2.7 && <0.3
-      , asn1-types == 0.3.0
-      , crypto-random == 0.0.8
-      , streaming-commons >= 0.1 && < 0.2
-      , conduit == 1.2.3.1
-      , conduit-combinators >= 0.3.0 && < 0.4
-      , transformers >=0.3 && <= 0.5
-      , mmorph == 1.0.4
-      , QuickCheck ==  2.7.6
-      , network-uri >= 2.6 && < 2.7
-      , hashtables >= 1.2 && < 1.3
-      , dequeue == 0.1.5
-      , lens >= 4.6 && < 4.7
-      , base64-bytestring >= 1.0
-      , http2 >= 0.7
-      , blaze-builder >= 0.3.3 &&  < 0.4
-      , void 
+  build-depends: base >=4.7 && <4.8
+                 , optparse-applicative
+                 , aeson >= 0.8
+                 , connection >= 0.2 && < 0.3
+                 , bytestring == 0.10.4.0
+                 , data-default == 0.5.3
+                 , tls >= 1.2 && < 1.3
+                 , data-default-class == 0.0.1
+                 , network == 2.6.0.2
+                 , x509 == 1.5.0.1
+                 , certificate == 1.3.9
+                 , x509-store ==  1.5.0
+                 , x509-system == 1.5.0
+                 , text >= 1.2 && < 1.3
+                 , bitset == 1.4.8
+                 , binary == 0.7.1.0
+                 , pipes == 4.1.4
+                 , containers == 0.5.5.1
+                 , clock == 0.4.1.3
+                 , network-simple == 0.4.0.2
+                 , pipes-concurrency >= 2.0 && < 2.1
+                 , unix == 2.7.0.1
+                 , filepath == 1.3.0.2
+                 , directory == 1.2.1.0
+                 , asn1-encoding == 0.9.0
+                 , crypto-pubkey >= 0.2.7 && <0.3
+                 , asn1-types == 0.3.0
+                 , crypto-random == 0.0.8
+                 , streaming-commons >= 0.1 && < 0.2
+                 , conduit == 1.2.3.1
+                 , conduit-combinators >= 0.3.0 && < 0.4
+                 , transformers >=0.3 && <= 0.5
+                 , mmorph == 1.0.4
+                 , QuickCheck ==  2.7.6
+                 , network-uri >= 2.6 && < 2.7
+                 , hashtables >= 1.2 && < 1.3
+                 , dequeue == 0.1.5
+                 , lens >= 4.6 && < 4.7
+                 , base64-bytestring >= 1.0
+                 , http2 >= 0.7
+                 , blaze-builder >= 0.3.3 &&  < 0.4
+                 , void 
      -- , asn-data
   
   -- Directories containing source files.
@@ -133,16 +133,28 @@ executable spdy-ping
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7 && <4.8, optparse-applicative, 
-     connection>=0.2.4 && < 0.3, bytestring == 0.10.4.0, data-default == 0.5.3,
-     tls >= 1.2 && < 1.3, 
-     data-default-class == 0.0.1, network == 2.6.0.2,
-     x509 == 1.5.0.1, certificate == 1.3.9,
-     x509-store ==  1.5.0, x509-system == 1.5.0, bitset == 1.4.8,
-     binary == 0.7.1.0, pipes == 4.1.4, containers == 0.5.5.1, clock == 0.4.1.3,
-     network-simple == 0.4.0.2, pipes-concurrency >= 2.0 && <2.2 , conduit == 1.2.3.1
-     , transformers >=0.3 && <= 0.5
-     , text >= 1.2
+  build-depends:    base >=4.7 && <4.8
+                  , optparse-applicative
+                  , connection>=0.2.4 && < 0.3
+                  , bytestring == 0.10.4.0
+                  , data-default == 0.5.3
+                  , tls >= 1.2 && < 1.3
+                  , data-default-class == 0.0.1
+                  , network == 2.6.0.2
+                  , x509 == 1.5.0.1
+                  , certificate == 1.3.9
+                  , x509-store ==  1.5.0
+                  , x509-system == 1.5.0
+                  , bitset == 1.4.8
+                  , binary == 0.7.1.0
+                  , pipes == 4.1.4
+                  , containers == 0.5.5.1
+                  , clock == 0.4.1.3
+                  , network-simple == 0.4.0.2
+                  , pipes-concurrency >= 2.0 && <2.2 
+                  , conduit == 1.2.3.1
+                  , transformers >=0.3 && <= 0.5
+                  , text >= 1.2
   
   -- Directories containing source files.
   hs-source-dirs: hs-src
