--- a/rede.cabal
+++ b/rede.cabal
@@ -105,7 +105,23 @@ executable reh-mimic
   hs-source-dirs: hs-src
   
   -- Base language which the package is written in.
-  default-language:    Haskell2010
+  default-language: Haskell2010
+
+  -- Very specific directory with the version of openssl 
+  -- that I'm using. As of February 2015, this one is not 
+  -- commonly installed 
+  include-dirs: /opt/openssl-1.0.2/include
+
+  c-sources: cbits/tlsinc.c
+
+  -- cc-options: -g3 -O0
+
+  ghc-options: -threaded -eventlog -rtsopts
+
+  extra-libraries: ssl 
+                 , crypto
+
+  extra-lib-dirs: /opt/openssl-1.0.2/lib
   
 
 
@@ -127,6 +143,7 @@ executable spdy-ping
                   ,Rede.SpdyProtocol.Framing.DataFrame  
                   ,Rede.SpdyProtocol.Framing.Ping   
                   ,Rede.SpdyProtocol.Framing.Settings
+                  ,Rede.MainLoop.OpenSSL_TLS
 
   
   -- LANGUAGE extensions used by modules in this package.
