Flow control is not good:

--- a/rede.cabal
+++ b/rede.cabal
@@ -98,6 +98,7 @@ executable reh-mimic
                  , base64-bytestring >= 1.0
                  , http2 >= 0.7
                  , blaze-builder >= 0.3.3 &&  < 0.4
+                 , process >= 1.2 && < 1.3
                  , void 
      -- , asn-data
   
