--- a/rede.cabal
+++ b/rede.cabal
@@ -98,7 +98,7 @@ executable reh-mimic
                  , lens >= 4.6 && < 4.7
                  , base64-bytestring >= 1.0
                  , http2 >= 0.7
-                 , hedis == 0.6.5
+                 --, hedis == 0.6.5
                  , blaze-builder >= 0.3.3 &&  < 0.4
                  , process >= 1.2 && < 1.3
                  , void 
