--- a/rede.cabal
+++ b/rede.cabal
@@ -86,6 +86,7 @@ executable reh-mimic
                  , crypto-pubkey >= 0.2.7 && <0.3
                  , asn1-types == 0.3.0
                  , crypto-random == 0.0.8
+                 , cryptohash >= 0.11
                  , streaming-commons >= 0.1 && < 0.2
                  , conduit == 1.2.3.1
                  , conduit-combinators >= 0.3.0 && < 0.4
