--- a/rede.cabal
+++ b/rede.cabal
@@ -63,6 +63,7 @@ executable reh-mimic
                  , connection >= 0.2 && < 0.3
                  , exceptions >= 0.6
                  , bytestring == 0.10.4.0
+                 , base64-bytestring >= 1.0
                  , data-default == 0.5.3
                  , tls >= 1.2 && < 1.3
                  , data-default-class == 0.0.1
@@ -117,6 +118,8 @@ executable reh-mimic
   include-dirs: /opt/openssl-1.0.2/include
 
   c-sources: cbits/tlsinc.c
+
+  cc-options: -fPIC -pthread -g -O0
 
   -- cc-options: -g3 -O0
 
