--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ spdy-ping
 /scripts/VNC-5.2.3-Linux-x64-ANY.tar.gz
 /scripts/google-chrome-stable_current_amd64.deb
 /aws_access_keys
+/scripts/VNC-5.2.3-Linux-x64/
+/scripts/google-chrome-beta_current_amd64.deb
