--- a/scripts/vncserv-ubuntu.conf
+++ b/scripts/vncserv-ubuntu.conf
@@ -5,7 +5,7 @@ stop on runlevel [!2345]
 
 umask 022
 
-expect fork
+# expect daemon
 
 console log
 
@@ -17,5 +17,5 @@ export USER
 setuid ubuntu
 
 script 
-    /home/ubuntu/vnc/vncserver-virtual -fp /usr/share/fonts/X11/misc,/usr/share/fonts/X11/Type1
+    exec /home/ubuntu/vnc/vncserver-virtual -fp /usr/share/fonts/X11/misc,/usr/share/fonts/X11/Type1
 end script
