Something to do here'

--- a/scripts/vncserv-ubuntu.conf
+++ b/scripts/vncserv-ubuntu.conf
@@ -5,7 +5,8 @@ stop on runlevel [!2345]
 
 umask 022
 
-# expect daemon
+# Don't expect anything!!
+# expect fork
 
 console log
 
@@ -14,8 +15,7 @@ export PATH
 env USER=ubuntu
 export USER
 
-setuid ubuntu
 
 script 
-    exec /home/ubuntu/vnc/vncserver-virtual -fp /usr/share/fonts/X11/misc,/usr/share/fonts/X11/Type1
+    exec /home/ubuntu/undaemon.py --user=1000 -- /home/ubuntu/vnc/vncserver-virtual -fp /usr/share/fonts/X11/misc,/usr/share/fonts/X11/Type1
 end script
