--- a/rede.cabal
+++ b/rede.cabal
@@ -64,6 +64,7 @@ executable reh-mimic
                  , exceptions >= 0.6
                  , bytestring == 0.10.4.0
                  , base64-bytestring >= 1.0
+                 , base16-bytestring >= 0.1.1
                  , data-default == 0.5.3
                  , tls >= 1.2 && < 1.3
                  , data-default-class == 0.0.1
