--- a/rede.cabal
+++ b/rede.cabal
@@ -106,6 +106,7 @@ executable reh-mimic
                  , process >= 1.2 && < 1.3
                  , void 
                  , hslogger >= 1.2.6
+                 , hashable == 1.2.3.1
      -- , asn-data
   
   -- Directories containing source files.
