--- a/scripts/mimic.conf
+++ b/scripts/mimic.conf
@@ -13,10 +13,13 @@ console log
 env PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/ubuntu/vnc/
 export PATH
 env MIMIC_DATA_DIR=/home/ubuntu/mimic/
-env LD_LIBRARY_PATH=opt/openssl-1.0.2/lib
+env LD_LIBRARY_PATH=/opt/openssl-1.0.2/lib
 export MIMIC_DATA_DIR
 export LD_LIBRARY_PATH
-
+env HOME=/root/
+export HOME
+env RANDFILE=/root/.rnd
+export RANDFILE
 
 script 
     exec /home/ubuntu/reh-mimic --action research
