Listening on a higher port now

--- a/scripts/mimic.conf
+++ b/scripts/mimic.conf
@@ -16,7 +16,7 @@ env MIMIC_DATA_DIR=/home/ubuntu/mimic/
 env LD_LIBRARY_PATH=/opt/openssl-1.0.2/lib
 export MIMIC_DATA_DIR
 export LD_LIBRARY_PATH
-env HOME=/root/
+env HOME=/ubuntu/
 export HOME
 env RANDFILE=/root/.rnd
 export RANDFILE
