Now reh-mimic runs under normal user

--- a/scripts/mimic.conf
+++ b/scripts/mimic.conf
@@ -20,6 +20,8 @@ env HOME=/ubuntu/
 export HOME
 env RANDFILE=/root/.rnd
 export RANDFILE
+setuid ubuntu
+setgid ubuntu
 
 script 
     exec /home/ubuntu/reh-mimic --action research
