--- a/rede.cabal
+++ b/rede.cabal
@@ -105,6 +105,8 @@ executable reh-mimic
                  , blaze-builder >= 0.3.3 &&  < 0.4
                  , process >= 1.2 && < 1.3
                  , void 
+                 , random >= 1.0
+                 , time
                  , hslogger >= 1.2.6
                  , hashable == 1.2.3.1
      -- , asn-data
