Working pretty decently. Check commit time

--- a/scripts/vncserv-ubuntu.conf
+++ b/scripts/vncserv-ubuntu.conf
@@ -15,6 +15,11 @@ export PATH
 env USER=ubuntu
 export USER
 
+pre-start script
+    mount -t cgroup undaemon -ocpu /sys/fs/cgroup/chrome || echo "sigh..."
+    exit 0
+end script
+
 
 script 
     exec /home/ubuntu/undaemon.py --user=1000 -- /home/ubuntu/vnc/vncserver-virtual -fp /usr/share/fonts/X11/misc,/usr/share/fonts/X11/Type1
