--- a/rede.cabal
+++ b/rede.cabal
@@ -66,6 +66,8 @@ executable reh-mimic
                  , base64-bytestring >= 1.0
                  , base16-bytestring >= 0.1.1
                  , data-default == 0.5.3
+                 , stm-chans >= 3.0
+                 , stm >= 2.4
                  , tls >= 1.2 && < 1.3
                  , data-default-class == 0.0.1
                  , network == 2.6.0.2
