Got the system working after restart, new status is an automatic yes

--- a/scripts/vncserv-ubuntu.conf
+++ b/scripts/vncserv-ubuntu.conf
@@ -16,6 +16,7 @@ env USER=ubuntu
 export USER
 
 pre-start script
+    mkdir -p /sys/fs/cgroup/chrome
     mount -t cgroup undaemon -ocpu /sys/fs/cgroup/chrome || echo "sigh..."
     exit 0
 end script
