--- a/rede.cabal
+++ b/rede.cabal
@@ -108,7 +108,7 @@ executable reh-mimic
                  , void
                  , random >= 1.0
                  , time
-                 , second-transfer
+                 , second-transfer >= 0.6.0
                  , hslogger >= 1.2.6
                  , hashable >= 1.2.3.1 && < 1.3
 
