--- a/scripts/vncserv-http2study.conf
+++ b/scripts/vncserv-http2study.conf
@@ -8,6 +8,7 @@ umask 022
 expect fork
 
 console log
+respawn
 
 env PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/http2study/vnc/
 export PATH
