--- a/scripts/vncserv-ubuntu.conf
+++ b/scripts/vncserv-ubuntu.conf
@@ -9,6 +9,7 @@ umask 022
 # expect fork
 
 console log
+respawn
 
 env PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/ubuntu/vnc/
 export PATH
